<resources>
    <string name="app_name">Tip Time App</string>
    <string name="total_number">$%1$s</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How Was The Service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="ok_15">OK(15%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip">Tip Amount</string>
    <string name="costofservice">Cost Of Service</string>
    <string name="how_the_service">How Was The Service?</string>
    <string name="amazing">Amazing(20%)</string>
    <string name="good">Good(18%)</string>
</resources>