<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"

        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="160dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cost_of_service"
                android:inputType="numberDecimal" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/how_the_service_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_the_service"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton

                android:id="@+id/amazing_rb"
                style="@style/MyRb"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing" />

            <RadioButton
                android:id="@+id/good_rb"
                style="@style/MyRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/ok_rb"
                style="@style/MyRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_15" />

        </RadioGroup>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/round_tip_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:checked="true"

            android:text="@string/round_up_tip" />

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/calculate" />

        <TextView
            android:id="@+id/tip_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tip" />


    </LinearLayout>
</ScrollView>